# LearningAssisstant

./: SETUP_GUIDE.md  run-backend-only.bat  run-backend-only.sh  run-frontend-only.bat  run-frontend-only.sh  run.bat  run.sh  setup.bat  setup.sh
nova-backend/: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml
nova-backend/app/: __init__.py  debug.py  main.py
nova-backend/app/graph/: __init__.py  graph.py  nodes.py  state.py
nova-backend/app/models/: __init__.py  student.py
nova-backend/app/routers/: chat.py  session.py
nova-backend/app/services/: curriculum.py
nova-backend/data/: curriculum.json
nova-tutor/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
nova-tutor/src/: App.tsx  index.css  vite-env.d.ts
nova-tutor/src/api/: client.ts
nova-tutor/src/components/Avatar/: Avatar.css  Avatar.tsx  emotions.ts
nova-tutor/src/components/Chat/: ChatPanel.tsx  MessageBubble.tsx
nova-tutor/src/components/Voice/: VoiceControls.css  VoiceControls.tsx
nova-tutor/src/hooks/: useCharacter.ts  useChat.ts  useVoice.ts
nova-tutor/src/i18n/: config.ts  en.json  index.ts  vi.json  zh.json
nova-tutor/src/types/: index.ts
