[project]
name = "nova-backend"
version = "0.1.0"
description = "AI Learning Assistant Backend with FastAPI and LangGraph"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "langgraph>=0.0.38",
    "langchain-core>=0.1.20",
    "langchain-anthropic>=0.1.0",
    "langchain-groq>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
